--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 4.0)
-project(drags)
+project(drags VERSION 0.0.01)
 
 set(SOURCE_LIST main.cpp src/dragsiolib.cpp)
 
