--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 4.0)
 project(drags VERSION 0.0.01)
 
+set(CMAKE_USE_RELATIVE_PATHS TRUE)
+
 set(SOURCE_LIST main.cpp src/dragsiolib.cpp)
 
 add_executable(drags ${SOURCE_LIST})
